Song editor now uses 'pre' instead of 'nowrap' to preserve white-spaces. Fixes #24

--- a/app/src/components/song/songEditor.less
+++ b/app/src/components/song/songEditor.less
@@ -1,5 +1,5 @@
 .song-editor{
     font-family: 'Inconsolata', monospace;
-    white-space: nowrap !important;
+    white-space: pre !important;
     min-height: 300px;
 }
